# python-packaging-example

./: .gitignore  .pre-commit-config.yaml  Readme.md  makefile.py  makefileutils.py  pip.ini  pyinstaller_main.py  pyproject.toml
.github/workflows/: github-actions-build.yml  github-actions-pytest.yml
examples/: exploring-python-version-tags.py  makefile.py  makefileutils.py
notebooks/: simple.ipynb  simple2.ipynb
src/packaging_example/: my_module.py
src/packaging_example/data/: data_additional.csv
src/packaging_example/data/data2/: data2.csv
test/: cvs_import_read_test.py  fib_test.py
