[build-system]
requires = ["setuptools>=65.5"]
build-backend = "setuptools.build_meta"

[project]
name = "packaging_example"
version = "0.0.8"

authors = [
  { name="Per Stoffer Jensen", email="perstofferjensen@gmail.com" },
]
description = "python packaging examples"
requires-python = ">=3.9"

dependencies = [
]


[project.optional-dependencies]
dev = [
    "flake8",
    "black",
    "isort",
    "build",
    "wheel",
    "pytest",
    "ipython",
    "ipykernel",
    "pre-commit",
    "nbmake",
    "pandas",
    "pyinstaller",
    "tomli",
    "setuptools>=65.5",
]

[project.scripts]
hello2 = "packaging_example.my_module:hello2"
hello1 = "packaging_example.my_module:hello"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
#include = ["packaging_example"] 

[tool.setuptools.package-data]
"*" = ["*.csv"]
#"packaging_example" = ["**/*.json", "**/*.xlsx", "**/*.png", "**/*.csv"]

[tool.black]
line-length = 122

[tool.isort]
line_length = 122
profile = "black"