[build-system]
requires = ["setuptools==69.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "packaging_example"
version = "0.0.9"

authors = [
  { name="Per Stoffer Jensen", email="perstofferjensen@gmail.com" },
]
description = "python packaging examples"
requires-python = "==3.10"

dependencies = [
    "pyinstaller==6.4.0",
]


[project.optional-dependencies]
dev = [
    "flake8",
    "black",
    "isort",
    "build",
    "wheel",
    "pytest",
    "ipython",
    "ipykernel",
    "pre-commit",
    "nbmake",
    "pandas",
    "tomli",
    "setuptools==69.2.0",
]

[project.scripts]
hello2 = "packaging_example.my_module:hello2"
hello1 = "packaging_example.my_module:hello"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
#include = ["packaging_example"] 

[tool.setuptools.package-data]
"*" = ["*.csv", "*.png"]
#"packaging_example" = ["**/*.json", "**/*.xlsx", "**/*.png", "**/*.csv"]

[tool.setuptools.exclude-package-data]
"packaging_example.data" = ["*.txt"]

[tool.black]
line-length = 122

[tool.isort]
line_length = 122
profile = "black"